This commit adds a user agent configuration for cURL requests, in particular to respect the CrossRef API Etiquette by providing URL and email contact information (see https://github.com/CrossRef/rest-api-doc#etiquette). Also finishes the assignment of selected references. config.default.json: Add configuration for URL, email address and user agent for cURL requests. WorkController.php: Improve assignWorksAction() by only adding a work ID if not already in project and update project only if at least one new work is assigned. Project.php: Add hasWorkId() and use it in addWorkId() and WorkController::assignWorksAction(). Http.php: Add cURL option for a user agent in curlRequest(). style.css: Add main-container CSS class with padding-bottom to avoid overlapping of footer on long pages. layout.php: Add main-container CSS class. project.php: Improve access of fields from Ajax responses. Add a more generic error message, if Ajax failed. Fix some minor jQuery issues and inconsistencies. Implement adding of selected references to project table when selected references are assigned.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,9 @@
 body {
     font-family: Arial, sans-serif;
 }
+.main-container {
+    padding-bottom: 50px;
+}
 .navbar .navbar-brand:before {
     background-image: url("/static/gfx/glyphicons/glyphicons/png/glyphicons-508-cluster.png");
     background-size: 18px 18px;
